@@ -3,7 +3,7 @@ package com.selimhorri.app.service.impl;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import javax.transaction.Transactional;
+import jakarta.transaction.Transactional;
 
 import org.springframework.stereotype.Service;
 
@@ -40,7 +40,7 @@ public class CredentialServiceImpl implements CredentialService {
 		log.info("*** CredentialDto, service; fetch credential by ids *");
 		return this.credentialRepository.findById(credentialId)
 				.map(CredentialMappingHelper::map)
-				.orElseThrow(() -> new CredentialNotFoundException(String.format("#### Credential with id: %d not found! ####", credentialId)));
+				.orElseThrow(() -> new CredentialNotFoundException("#### Credential with id: %d not found! ####".formatted(credentialId)));
 	}
 	
 	@Override
@@ -71,7 +71,7 @@ public class CredentialServiceImpl implements CredentialService {
 	@Override
 	public CredentialDto findByUsername(final String username) {
 		return CredentialMappingHelper.map(this.credentialRepository.findByUsername(username)
-				.orElseThrow(() -> new UserObjectNotFoundException(String.format("#### Credential with username: %s not found! ####", username))));
+				.orElseThrow(() -> new UserObjectNotFoundException("#### Credential with username: %s not found! ####".formatted(username))));
 	}
 	
 	
